kubernetes/mini/core/kube-system/cilium/policies/allow-egress-nas.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-nas
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/nas: allow
  egress:
    - toCIDRSet:
        - cidr: 192.168.1.234/32
