kubernetes/mini/core/kube-system/cilium/policies/allow-ingress-apiserver.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-apiserver
spec:
  endpointSelector:
    matchLabels:
      ingress.home.arpa/apiserver: allow
  ingress:
    - fromEntities:
        - kube-apiserver
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "10250"
